# bytewax-duckdb

./: .gitignore  LICENSE.md  MODULE_STORE_README.md  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
docs/: conf.py  index.md
pytests/: __init__.py  bytewax_duckdb.py  test_bytewax-duckdb.py  test_sink.py
requirements/: build-py3.10.txt  build-py3.11.txt  build-py3.12.txt  build-py3.8.txt  build-py3.9.txt  dev.txt  doc.txt  lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.8.txt  lib-py3.9.txt
src/bytewax/bytewax-duckdb/: __init__.py
src/bytewax/bytewax_duckdb/: __init__.py
src/bytewax/duckdb/: __init__.py  operators.py
